[package]
name = "hollowing_test"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = "0.6.1"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_Threading","Win32_System_Memory","Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Security"
]
